--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout_Drinks"
         android:layout_width="0dp"
-        android:layout_height="@dimen/layout_height_40dp"
+        android:layout_height="@dimen/TabLayout_height_35dp"
         android:background="@color/color_TabLayoutBackground"
         app:layout_constraintBottom_toTopOf="@+id/viewPager_Drinks"
         app:layout_constraintEnd_toStartOf="@+id/fragmentDisplay"
@@ -45,7 +45,7 @@
         android:id="@+id/fragmentAmount"
         android:name="tw.org.iii.pos.AmountFragment"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="@dimen/amount_layout_height_220dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
     <fragment
         android:id="@+id/fragmentDisplay"
         android:name="tw.org.iii.pos.DisplayFragment"
-        android:layout_width="158dp"
+        android:layout_width="@dimen/fragmentDisplay_width"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/fragmentAmount"
         app:layout_constraintEnd_toEndOf="parent"
