--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,10 +11,28 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#000000</item>
     </style>
+    <dimen name="textSize8sp">8sp</dimen>
+    <dimen name="textSize10sp">10sp</dimen>
+    <dimen name="textSize12sp">12sp</dimen>
+    <dimen name="textSize15sp">15sp</dimen>
     <dimen name="textSize20sp">20sp</dimen>
     <dimen name="textSize25sp">25sp</dimen>
     <dimen name="textSize30sp">30sp</dimen>
-    <dimen name="layout_width_130dp">130dp</dimen>
-    <dimen name="layout_height_40dp">40dp</dimen>
+    <dimen name="TabLayout_height_35dp">35dp</dimen>
+    <dimen name="button_tea_layout_width_130dp">130dp</dimen>
+    <dimen name="button_width_60dp">60dp</dimen>
+    <dimen name="button_width_50dp">50dp</dimen>
+    <dimen name="button_height_60dp">60dp</dimen>
+    <dimen name="button_width_45dp">45dp</dimen>
+    <dimen name="button_height_45dp">45dp</dimen>
+    <dimen name="button_width_40dp">40dp</dimen>
+    <dimen name="button_height_40dp">40dp</dimen>
+    <dimen name="button_height_35dp">35dp</dimen>
+    <dimen name="RadioGroup_layout_width_50dp">50dp</dimen>
+    <dimen name="RadioGroup_layout_width_70dp">70dp</dimen>
+    <dimen name="RadioGroup_layout_width_90dp">90dp</dimen>
+    <dimen name="RadioGroup_layout_width_100dp">100dp</dimen>
+    <dimen name="amount_layout_height_220dp">220dp</dimen>
+    <dimen name="fragmentDisplay_width">180dp</dimen>
 
 </resources>
